[package]
name = "dtw"
version = "0.0.1"
publish = false
description = "DTW implementations for trace alignment"
edition = "2021"
authors = ["Jacarte <jacarte9212@gmail.com>"]


# wasmtime as a dep
[dependencies]
byteorder = "1.4.3"
log = { workspace = true }
regex = {  workspace = true }

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "dtws"
harness = false


[target.'cfg(unix)'.dependencies]
rustix = { version = "0.37.13", features = ["mm"] }


[features]
default = []
# All array checks are disabled, this, in theory will speed up the DTW code
# If this feature is enabled, then the functions that calculates the DTW value, must be
# marked as unsafe
disable_mem_check = []
